--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,23 @@
     <parent>
         <groupId>it.eng.parer</groupId>
         <artifactId>parer-pom</artifactId>
-        <version>4.0.0</version>
+        <version>4.2.0</version>
     </parent>
+
+
+    <distributionManagement>
+        <repository>
+	   <id>github</id>
+	   <url>https://maven.pkg.github.com/RegioneER/parer-test-suite</url>
+	 </repository>      
+    </distributionManagement>
+
+     <repositories>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/RegioneER/parer-framework-parerpom</url>            
+        </repository>               
+      </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
